--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     max-width: 420px;
     display: grid;
     margin: 2rem;
-    grid-template-rows: 5fr auto 6fr;
+    grid-template-rows: auto 24rem auto;
     grid-template-areas: 
         "superior"
         "display"
@@ -56,7 +56,7 @@
 .tarjetaPokemon {
     margin: 1rem;
     width: auto;
-    height: auto;
+    height: 21.2rem;
     background: white;
     border: solid .15rem black;
 }
@@ -102,24 +102,36 @@
     background-color: red;
     height: 6px;
     width: 0;
+    margin-bottom: 5px;
 }
 
+input {
+    width: auto;
+    height: 25px;
+    text-align: center;
+    border-radius: 5px;
+    margin-right: 15px;
+}
+
+#pokePic {
+    display: none;
+}
 
 /* Dibujos */
 /* Creamos un circulo */
 .circulo {
     border: solid black;
     background: rgb(0, 217, 255);
-    width: 4rem;
-    height: 4rem;
+    width: 3.2rem;
+    height: 3.2rem;
     border-radius: 50%;
     display: inline-block;
 }
 
 /* Creamos un circulo pequeño basado en .circulo */
 .small {
-    width: 1rem;
-    height: 1rem;
+    width: .5rem;
+    height: .5rem;
     margin-left: 0.7rem;
 }
 
@@ -129,17 +141,20 @@
 .small:nth-child(4) { background: greenyellow;}
 
 .medium {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.3rem;
+    height: 2.3rem;
     background: blue;
 }
 
 /* Rectangulos */
 .rectangulo {
-    width: 4rem;
-    height: 1.3rem;
+    width: 3.1rem;
+    height: 1.2rem;
     border: solid black;
     display: inline-block;
+    position: relative;
+    bottom: 4px;
+    margin: 5px;
 }
 
 /* Aplicamos colores */
