--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 .areaSuperior {
     grid-area: superior;
     border: solid 3px black;
-    border-bottom: solid 10px black;
+    border-bottom: solid 1px black;
     border-radius: 1rem 1rem 0 0;
     background: rgb(192, 36, 36);
     /* Añado flex y padding para acomodar los elemntos */
@@ -32,6 +32,7 @@
 .display {
     border: solid 3px black;
     background: red;
+    box-shadow: 0px 17px 12px -11px rgba(0,0,0,0.84) inset;
 }
 
 .areaInferior {
@@ -45,6 +46,7 @@
         "a . c"
         "b . c"
     ;
+    box-shadow: 0px -11px 10px -6px rgba(0,0,0,0.84);
 }
 
 /* Acomod los elementos en el grid area */
@@ -59,10 +61,11 @@
     height: 21.2rem;
     background: white;
     border: solid .15rem black;
+    box-shadow: 1px 0px 34px -1px rgba(50, 172, 172, 0.84) inset;
 }
 
 .displaySuperior {
-    background: rgba(4, 238, 255, 0.144);
+    background: rgba(4, 50, 255, 0.281);
     padding: 1rem;
     display: grid;
     grid-template-columns: 30px auto 30px;
@@ -105,15 +108,28 @@
     margin-bottom: 5px;
 }
 
-input {
-    width: auto;
+input[type=text] {
+    width: 11.1rem;
     height: 25px;
     text-align: center;
     border-radius: 5px;
     margin-right: 15px;
 }
 
+input[type=submit]{
+    color: black;
+    width: 11.6rem;
+    background-color: rgb(226, 48, 48);
+    height: 25px;
+    text-align: center;
+    border-radius: 5px;
+    margin-right: 15px;
+}
+
+/* Imagen */
 #pokePic {
+    width: 7rem;
+    height: 7rem;
     display: none;
 }
 
@@ -186,9 +202,3 @@ input {
 .cruceta:nth-child(3) {grid-area: mi;}
 .cruceta:nth-child(4) {grid-area: ri;}
 .cruceta:nth-child(5) {grid-area: do;}
-
-/* Imagen */
-#pokePic {
-    width: 7rem;
-    height: 7rem;
-}
