--- a/style.css
+++ b/style.css
@@ -1,11 +1,35 @@
-* {
-    margin: 0;
+:root { /* Variables para edición */
+    --pkdx-Rojo: #ca1616;
+    --pkdx-Metalico: #a62c2b;
+    --border-General: #2C2C2B;
+    --sombra-Display: rgba(50, 172, 172, 0.84);
+    --fondo-Display: #00a5d1;
+    --sombra-Exterior: 1.125rem 1rem 0.825rem -0.25rem rgba(0,0,0,0.62);
+    /* test */
+    --test: #0080d1;
+    --main-bg: #fff;
+    --main-color: #000;
+}
+
+* { margin: 0; }
+
+input {
+    width: 11.1rem;
+    height: 1.5625rem;
+    border-radius: 0.3125rem;
+    margin-right: 0.9375rem;
+    text-align: center;
+}
+
+input[type=submit]{
+    width: 11.6rem;
+    background-color: var(--pkdx-Rojo);
 }
 
 .contenedor {
-    max-width: 420px;
+    max-width: 26.25rem;
+    /* margin: auto; */
     display: grid;
-    margin: 2rem;
     grid-template-rows: auto 24rem auto;
     grid-template-areas: 
         "superior"
@@ -13,32 +37,31 @@
         "inferior"
     ;
     border-radius: 1.19rem;
-    box-shadow: 18px 16px 14px -4px rgba(0,0,0,0.62);
-    -webkit-box-shadow: 18px 16px 14px -4px rgba(0,0,0,0.62);
-    -moz-box-shadow: 18px 16px 14px -4px rgba(0,0,0,0.62);
+    box-shadow: var(--sombra-Exterior);
+    -webkit-box-shadow: var(--sombra-Exterior);
+    -moz-box-shadow: var(--sombra-Exterior);
 }
 
 .areaSuperior {
     grid-area: superior;
-    border: solid 3px black;
-    border-bottom: solid 1px black;
+    border: solid 0.1875rem var(--border-General);
+    border-bottom: solid 0.0625rem var(--border-General);
     border-radius: 1rem 1rem 0 0;
-    background: rgb(192, 36, 36);
-    /* Añado flex y padding para acomodar los elemntos */
+    background: var(--pkdx-Metalico);
     display: flex;
     padding: 2rem;
 }
 
 .display {
-    border: solid 3px black;
-    background: red;
-    box-shadow: 0px 17px 12px -11px rgba(0,0,0,0.84) inset;
+    border: solid 0.1875rem var(--border-General);
+    background: var(--pkdx-Rojo);
+    box-shadow: 0 1.0625rem 0.75rem -0.6875rem rgba(0,0,0,0.84) inset;
 }
 
 .areaInferior {
-    border: solid 3px black;
+    border: solid 0.1875rem var(--border-General);
     border-radius: 0 0 1rem 1rem;
-    background: rgb(192, 36, 36);
+    background: var(--pkdx-Metalico);
     padding: 1.5rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -46,10 +69,10 @@
         "a . c"
         "b . c"
     ;
-    box-shadow: 0px -11px 10px -6px rgba(0,0,0,0.84);
+    box-shadow: 0px -0.6875rem 0.625rem -0.375rem rgba(0,0,0,0.84);
 }
 
-/* Acomod los elementos en el grid area */
+/* Acomodo los elementos en el grid area */
 .otros { grid-area: a;}
 .buscador { grid-area: b;}
 .pad {grid-area: c;}
@@ -60,15 +83,15 @@
     width: auto;
     height: 21.2rem;
     background: white;
-    border: solid .15rem black;
-    box-shadow: 1px 0px 34px -1px rgba(50, 172, 172, 0.84) inset;
+    border: solid 0.15rem var(--border-General);
+    box-shadow: 0.0625rem 0 2.125rem -0.0625 var(--sombra-Display) inset;
 }
 
 .displaySuperior {
-    background: rgba(4, 50, 255, 0.281);
+    background: var(--fondo-Display);
     padding: 1rem;
     display: grid;
-    grid-template-columns: 30px auto 30px;
+    grid-template-columns: 1.875rem auto 1.875rem;
     grid-template-rows: 1rem 3rem;
     grid-template-areas:
         "pokeId nombre tipo"
@@ -81,7 +104,14 @@
 #pokeId {grid-area: pokeId;}
 #nombrePoke {grid-area: nombre;}
 #tipoPoke {grid-area: tipo;}
-#pokePic {grid-area: pic; top: 27px; position:relative;}
+#pokePic {
+    grid-area: pic; 
+    top: 1.6875rem; 
+    position:relative;
+    width: 7rem;
+    height: 7rem;
+    display: none;
+}
 
 /*
 .menuDisplay {
@@ -96,47 +126,19 @@
     justify-content: space-around;
 }
 */
-.stats {
-    padding: 3rem;
-}
+.stats { padding: 3rem; }
 
 .barra {
     position: relative;
-    background-color: red;
-    height: 6px;
+    background-color: var(--pkdx-Rojo);
+    height: 0.375rem;
     width: 0;
-    margin-bottom: 5px;
-}
-
-input[type=text] {
-    width: 11.1rem;
-    height: 25px;
-    text-align: center;
-    border-radius: 5px;
-    margin-right: 15px;
-}
-
-input[type=submit]{
-    color: black;
-    width: 11.6rem;
-    background-color: rgb(226, 48, 48);
-    height: 25px;
-    text-align: center;
-    border-radius: 5px;
-    margin-right: 15px;
-}
-
-/* Imagen */
-#pokePic {
-    width: 7rem;
-    height: 7rem;
-    display: none;
+    margin-bottom: 0.3125rem;
 }
 
 /* Dibujos */
-/* Creamos un circulo */
 .circulo {
-    border: solid black;
+    border: solid var(--border-General);
     background: rgb(0, 217, 255);
     width: 3.2rem;
     height: 3.2rem;
@@ -146,8 +148,8 @@ input[type=submit]{
 
 /* Creamos un circulo pequeño basado en .circulo */
 .small {
-    width: .5rem;
-    height: .5rem;
+    width: 0.5rem;
+    height: 0.5rem;
     margin-left: 0.7rem;
 }
 
@@ -166,16 +168,16 @@ input[type=submit]{
 .rectangulo {
     width: 3.1rem;
     height: 1.2rem;
-    border: solid black;
+    border: solid var(--border-General);
     display: inline-block;
     position: relative;
-    bottom: 4px;
-    margin: 5px;
+    bottom: 0.25rem;
+    margin: 0.3125rem;
 }
 
 /* Aplicamos colores */
-.rectangulo:nth-child(2) { background: greenyellow;}
-.rectangulo:nth-child(3) { background: red;}
+.rectangulo:nth-child(2) { background: greenyellow; }
+.rectangulo:nth-child(3) { background: red; }
 
 /* Diseño de la cruceta */
 .cruceta {
@@ -202,3 +204,17 @@ input[type=submit]{
 .cruceta:nth-child(3) {grid-area: mi;}
 .cruceta:nth-child(4) {grid-area: ri;}
 .cruceta:nth-child(5) {grid-area: do;}
+
+
+
+/* testing POKE ID y POKE TIPO*/
+#pokeId {
+    background-color: var(--test);
+    border-radius: 50%;
+    margin-right: 0.625rem;
+    padding: 0.3125rem;
+}
+
+.tipoPk {
+    background-color: #00a5d1;
+}
