--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-:root { /* Variables para edición */
+:root {
     --pkdx-Rojo: #ca1616;
-    --pkdx-Metalico: #a62c2b;
+    --pkdx-Metalico: linear-gradient(360deg, #a62c2b 50%, #ca1616 100%); /* Original #a62c2b */
     --border-General: #2C2C2B;
-    --sombra-Display: rgba(50, 172, 172, 0.84);
     --fondo-Display: #00a5d1;
     --sombra-Exterior: 1.125rem 1rem 0.825rem -0.25rem rgba(0,0,0,0.62);
+    --sombra-Elementos-Display: .1875rem .1875rem .1875rem .1875rem slategray;
 }
 
 * { margin: 0; }
@@ -65,22 +65,18 @@ input[type=submit]{
         "a . c"
         "b . c"
     ;
-    box-shadow: 0px -0.6875rem 0.625rem -0.375rem rgba(0,0,0,0.84);
+    box-shadow: 0 -0.6875rem 0.625rem -0.375rem rgba(0,0,0,0.84);
 }
 
-/* Acomodo los elementos en el grid area */
-.otros { grid-area: a;}
-.buscador { grid-area: b;}
-.pad {grid-area: c;}
+.otros { grid-area: a; }
+.buscador { grid-area: b; }
+.pad { grid-area: c; }
 
-/* Tarjeta Pokemon */
 .tarjetaPokemon {
     margin: 1rem;
     width: auto;
     height: 21.2rem;
-    background: white;
-    border: solid 0.15rem var(--border-General);
-    box-shadow: 0.0625rem 0 2.125rem -0.0625 var(--sombra-Display) inset;
+    background: whitesmoke;
 }
 
 .displaySuperior {
@@ -95,21 +91,55 @@ input[type=submit]{
     ;
     align-items: center;
     justify-items: center;
+    box-shadow: inset 0 .125rem .625rem .125rem rgba(0, 0, 0, 0.719);
+    
 }
 
-#pokeId {grid-area: pokeId;}
+#pokeId {
+    grid-area: pokeId; 
+    margin-left: 4rem;
+}
 #nombrePoke {grid-area: nombre;}
 #tipoPoke {grid-area: tipo;}
 #pokePic {
     grid-area: pic; 
-    top: 1.6875rem; 
-    position:relative;
+    top: 2.3rem; 
+    position: relative;
     width: 7rem;
     height: 7rem;
     display: none;
+    background-image: linear-gradient(180deg, rgba(250, 5, 107, 0.068) 50%, rgb(0, 255, 115) 100%);
+    border-radius: 30% 5%;
+    box-shadow: var(--sombra-Elementos-Display);
 }
 
-.stats { padding: 3rem; }
+#pokeId {
+    display: none;
+    background-color: orange;
+    border-radius: 50%;
+    margin-right: 0.625rem;
+    padding: 0.3125rem;
+    border-radius: 10% 30% 50% 70%;
+    font-weight: bold;
+    box-shadow: var(--sombra-Elementos-Display);
+}
+
+.tipoPk {
+    background-color: greenyellow;
+    list-style: none;
+    margin: .4rem 4rem .4rem 0;
+    padding: .2rem;
+    text-align: center;
+    border-radius: 40% 100% / 1% 100%;
+    font-weight: bold;
+    box-shadow: var(--sombra-Elementos-Display);
+}
+
+.stats { 
+    padding: 3rem; 
+    height: 9.25rem;
+    box-shadow: inset .0625rem .0625rem .625rem .125rem black;
+}
 
 .barra {
     position: relative;
@@ -136,7 +166,7 @@ input[type=submit]{
     margin-left: 0.7rem;
 }
 
-/* modificamos el color de cada hijo */
+/* Modificamos el color de cada hijo */
 .small:nth-child(2) { background: red;}
 .small:nth-child(3) { background: orange;}
 .small:nth-child(4) { background: greenyellow;}
@@ -158,7 +188,6 @@ input[type=submit]{
     margin: 0.3125rem;
 }
 
-/* Aplicamos colores */
 .rectangulo:nth-child(2) { background: greenyellow; }
 .rectangulo:nth-child(3) { background: red; }
 
@@ -181,21 +210,10 @@ input[type=submit]{
         ". do ."
     ;
 }
+
 /* Posicionamos las "cruceta" para crear un pad */
 .cruceta:nth-child(1) {grid-area: up;}
 .cruceta:nth-child(2) {grid-area: le;}
 .cruceta:nth-child(3) {grid-area: mi;}
 .cruceta:nth-child(4) {grid-area: ri;}
 .cruceta:nth-child(5) {grid-area: do;}
-
-/* testing POKE ID y POKE TIPO*/
-#pokeId {
-    background-color: var(--test);
-    border-radius: 50%;
-    margin-right: 0.625rem;
-    padding: 0.3125rem;
-}
-
-.tipoPk {
-    background-color: #00a5d1;
-}
